style(styles): fix scrollbar & sidebar

--- a/src/style/basic.styl
+++ b/src/style/basic.styl
@@ -21,18 +21,3 @@ ol {
 * {
   box-sizing border-box
 }
-
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-::-webkit-scrollbar-track {
-  border-radius: 3px;
-  background: rgba(0, 0, 0, 0.05);
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 3px;
-  background: rgba(0, 0, 0, 0.25);
-}
